[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scripts/menu/config/AudioConfigMenu.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/fonts/Extrude.ttf"

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Assets/fonts/DotGothic16.ttf"

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://Assets/fonts/DotGothic16.ttf"

[sub_resource type="DynamicFont" id=8]
size = 32
font_data = SubResource( 7 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Assets/fonts/DotGothic16.ttf"

[sub_resource type="DynamicFont" id=6]
size = 24
font_data = SubResource( 5 )

[sub_resource type="StyleBoxLine" id=16]
color = Color( 0.239216, 0.0784314, 0.0784314, 1 )
grow_begin = 0.0
thickness = 10

[sub_resource type="StyleBoxLine" id=21]
color = Color( 0.34902, 0.113725, 0.113725, 1 )
thickness = 10

[sub_resource type="StyleBoxLine" id=20]
color = Color( 0.34902, 0.113725, 0.113725, 1 )
thickness = 10

[sub_resource type="StyleBoxLine" id=15]
color = Color( 0.239216, 0.0784314, 0.0784314, 1 )
thickness = 10

[sub_resource type="StyleBoxLine" id=22]
color = Color( 0.34902, 0.113725, 0.113725, 1 )
thickness = 10

[sub_resource type="DynamicFontData" id=17]
font_path = "res://Assets/fonts/DotGothic16.ttf"

[sub_resource type="DynamicFont" id=18]
font_data = SubResource( 17 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.239216, 0.0784314, 0.0784314, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="AudioConfigMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="BackgroundColor" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.282353, 0.0941176, 0.0941176, 1 )

[node name="Root" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="MarginContents" type="MarginContainer" parent="Root"]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32

[node name="Contents" type="VBoxContainer" parent="Root/MarginContents"]
margin_left = 32.0
margin_top = 32.0
margin_right = 992.0
margin_bottom = 568.0

[node name="NavigationContents" type="HBoxContainer" parent="Root/MarginContents/Contents"]
margin_right = 960.0
margin_bottom = 48.0

[node name="Header" type="Label" parent="Root/MarginContents/Contents/NavigationContents"]
margin_right = 135.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 2 )
text = "Audio"

[node name="Spacer" type="Control" parent="Root/MarginContents/Contents/NavigationContents"]
margin_left = 139.0
margin_right = 908.0
margin_bottom = 48.0
size_flags_horizontal = 3

[node name="BackOption" type="Label" parent="Root/MarginContents/Contents/NavigationContents"]
margin_left = 912.0
margin_top = 6.0
margin_right = 960.0
margin_bottom = 41.0
mouse_filter = 0
custom_fonts/font = SubResource( 4 )
text = "Back"

[node name="VolumeSubheader" type="Label" parent="Root/MarginContents/Contents"]
margin_top = 52.0
margin_right = 960.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 8 )
text = "Volume"

[node name="InGameVolumeOption" type="HBoxContainer" parent="Root/MarginContents/Contents"]
margin_top = 104.0
margin_right = 960.0
margin_bottom = 139.0

[node name="InGameVolOptLabel" type="Label" parent="Root/MarginContents/Contents/InGameVolumeOption"]
margin_right = 120.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 6 )
text = "In-Game   "

[node name="Spacer" type="Control" parent="Root/MarginContents/Contents/InGameVolumeOption"]
margin_left = 124.0
margin_right = 540.0
margin_bottom = 35.0
size_flags_horizontal = 3

[node name="InGameVolOptSlider" type="HSlider" parent="Root/MarginContents/Contents/InGameVolumeOption"]
margin_left = 544.0
margin_right = 960.0
margin_bottom = 35.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/slider = SubResource( 16 )
custom_styles/grabber_area_highlight = SubResource( 21 )
custom_styles/grabber_area = SubResource( 20 )
min_value = -10.0
max_value = 10.0
value = 1.0

[node name="VoiceVolumeOption" type="HBoxContainer" parent="Root/MarginContents/Contents"]
margin_top = 143.0
margin_right = 960.0
margin_bottom = 178.0

[node name="VoiceVolOptLabel" type="Label" parent="Root/MarginContents/Contents/VoiceVolumeOption"]
margin_right = 120.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 6 )
text = "Voice Chat"

[node name="Spacer" type="Control" parent="Root/MarginContents/Contents/VoiceVolumeOption"]
margin_left = 124.0
margin_right = 540.0
margin_bottom = 35.0
size_flags_horizontal = 3

[node name="VoiceVolOptSlider" type="HSlider" parent="Root/MarginContents/Contents/VoiceVolumeOption"]
margin_left = 544.0
margin_right = 960.0
margin_bottom = 35.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/slider = SubResource( 15 )
custom_styles/grabber_area_highlight = SubResource( 22 )
custom_styles/grabber_area = SubResource( 22 )
min_value = -10.0
max_value = 10.0
value = -1.0

[node name="OtherSubheader" type="Label" parent="Root/MarginContents/Contents"]
margin_top = 182.0
margin_right = 960.0
margin_bottom = 230.0
custom_fonts/font = SubResource( 8 )
text = "Other"

[node name="MuteOption" type="HBoxContainer" parent="Root/MarginContents/Contents"]
margin_top = 234.0
margin_right = 960.0
margin_bottom = 269.0

[node name="MuteOptionLabel" type="Label" parent="Root/MarginContents/Contents/MuteOption"]
margin_right = 48.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 6 )
text = "Mute"

[node name="Spacer" type="Control" parent="Root/MarginContents/Contents/MuteOption"]
margin_left = 52.0
margin_right = 932.0
margin_bottom = 35.0
size_flags_horizontal = 3

[node name="MuteOptionBox" type="CheckBox" parent="Root/MarginContents/Contents/MuteOption"]
margin_left = 936.0
margin_right = 960.0
margin_bottom = 35.0

[node name="DeviceOption" type="HBoxContainer" parent="Root/MarginContents/Contents"]
margin_top = 273.0
margin_right = 960.0
margin_bottom = 308.0

[node name="DeviceOptionLabel" type="Label" parent="Root/MarginContents/Contents/DeviceOption"]
margin_right = 204.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 6 )
text = "Output Device    "

[node name="Spacer" type="Control" parent="Root/MarginContents/Contents/DeviceOption"]
margin_left = 208.0
margin_right = 582.0
margin_bottom = 35.0
size_flags_horizontal = 3

[node name="DeviceOptionMenu" type="OptionButton" parent="Root/MarginContents/Contents/DeviceOption"]
margin_left = 586.0
margin_right = 960.0
margin_bottom = 35.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 18 )
custom_styles/hover = SubResource( 19 )
custom_styles/pressed = SubResource( 19 )
custom_styles/focus = SubResource( 19 )
custom_styles/disabled = SubResource( 19 )
custom_styles/normal = SubResource( 19 )
align = 1

[node name="VoiceDeviceOption" type="HBoxContainer" parent="Root/MarginContents/Contents"]
margin_top = 312.0
margin_right = 960.0
margin_bottom = 347.0

[node name="VoiceDeviceOptLabel" type="Label" parent="Root/MarginContents/Contents/VoiceDeviceOption"]
margin_right = 204.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 6 )
text = "Microphone Device"

[node name="Spacer" type="Control" parent="Root/MarginContents/Contents/VoiceDeviceOption"]
margin_left = 208.0
margin_right = 582.0
margin_bottom = 35.0
size_flags_horizontal = 3

[node name="VoiceDeviceOptMenu" type="OptionButton" parent="Root/MarginContents/Contents/VoiceDeviceOption"]
margin_left = 586.0
margin_right = 960.0
margin_bottom = 35.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 18 )
custom_styles/hover = SubResource( 19 )
custom_styles/pressed = SubResource( 19 )
custom_styles/focus = SubResource( 19 )
custom_styles/disabled = SubResource( 19 )
custom_styles/normal = SubResource( 19 )
align = 1

[connection signal="gui_input" from="Root/MarginContents/Contents/NavigationContents/BackOption" to="." method="_on_BackOption_gui_input"]
[connection signal="mouse_entered" from="Root/MarginContents/Contents/NavigationContents/BackOption" to="." method="_on_BackOption_mouse_entered"]
[connection signal="mouse_exited" from="Root/MarginContents/Contents/NavigationContents/BackOption" to="." method="_on_BackOption_mouse_exited"]
[connection signal="drag_ended" from="Root/MarginContents/Contents/InGameVolumeOption/InGameVolOptSlider" to="." method="_on_InGameVolOptSlider_drag_ended"]
[connection signal="value_changed" from="Root/MarginContents/Contents/InGameVolumeOption/InGameVolOptSlider" to="." method="_on_InGameVolOptSlider_value_changed"]
[connection signal="value_changed" from="Root/MarginContents/Contents/VoiceVolumeOption/VoiceVolOptSlider" to="." method="_on_VoiceVolOptSlider_value_changed"]
[connection signal="toggled" from="Root/MarginContents/Contents/MuteOption/MuteOptionBox" to="." method="_on_MuteOptionBox_toggled"]
[connection signal="item_selected" from="Root/MarginContents/Contents/DeviceOption/DeviceOptionMenu" to="." method="_on_DeviceOptionMenu_item_selected"]
[connection signal="item_selected" from="Root/MarginContents/Contents/VoiceDeviceOption/VoiceDeviceOptMenu" to="." method="_on_VoiceDeviceOptMenu_item_selected"]
